--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,38 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  border: 50px;
 }
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  border: 10px solid white;
+  border-top: 10px solid white;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 10px;
+  margin: 10px 0px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 10px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  width: 40%;
+  margin: 0px 30%;
+  padding: 10px 20px;
 }
