--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,18 @@
-/* Add CSS Styling */
+.oddNumber{
+    background-color: hsl(0, 85%, 79%);
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+.oddNumber.three {
+    font-size: 24px;
+}
+
+#two {
+    font-size: 40px;
+    color: blue;
+}
+
+#four {
+    background-color: rgb(134, 250, 144);
+    font-weight: bold;
+    font-size: 24px;
+}
