--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,13 @@
-/* Add CSS Styling */
+.Click{
+    font-size: 58px;
+    font-family: Helvetica, "Times New Roman",sans-serif;
+}
+
+.Yes {
+    background-color: black;
+    color: white;
+}
+
+.No {
+    background-color: yellow;
+}
