--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,1 +1,9 @@
-/* Add CSS Styling */
+div p {
+    background-color: yellow;
+}
+
+.container .text {
+    color: red;
+    text-align: center;
+    font-size: 20px;
+}
