--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -46,3 +46,30 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* Solution DO by Myself */
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+}
+
+.Left-elements{
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+
+.Right-elements{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.links{
+  display: flex;
+  gap: 10px;
+}
+
+
