--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,43 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+
+/* My solution */
+
+.modal{
+  padding: 16px;
+  display: flex;
+  flex: auto;
+  max-width: 600px;
+  gap: 10px;
+}
+
+.icon{
+  flex: 1 0 auto;
+}
+
+.content {
+  display: inline-flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.TitleNCancel {
+  display: flex;
+  
+  justify-content: space-between;
+  align-content: center;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.OptionButtons{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
