--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -2,7 +2,8 @@
 
 body {
   height: 100vh;
-  margin: 0;
+  margin: 0px;
+  /* changed from 0 to 10px */
   overflow: hidden;
   font-family: Roboto, sans-serif;
 }
@@ -23,4 +24,70 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+/* My solution */
+
+ul {
+  /* Remove bullet points */
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  /* this removes the line under our links */
+  text-decoration: none;
+  color: rgb(138, 138, 138);
+  font-weight: 500;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 16px;
+  border: 30px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.left-links {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+
+}
+
+.right-links {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+
+.content {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+button {
+  padding: 8px 16px;
+
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: rgb(235, 235, 235);
+
 }
