--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -24,6 +24,76 @@ body {
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
   border-radius: 4px;
+}
+
+/* My solution */
+
+
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+    min-height: 100vh;
+}
+
+.header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: xx-large;
+  font-weight: 900;
+  padding: 0px 16px;
+}
+
+.container {
+  display: flex;
+  flex: 1;
+  align-content: stretch;
+}
+
+.sidebar {
+  min-width: 300px;
+  min-height: 100%;
+  flex: 1 1 auto;
+  padding: 16px;
+}
+
+ul {
+  /* Remove bullet points */
+  list-style-type: none;
+  /*margin: 0;
+  padding: 0;*/
+} 
+
+a {
+  /* this removes the line under our links */
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  font-size: 24px;
+
+}
+
+
+.Cards-Area {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 48px;
+  flex: auto;
+}
+
+.card {
+  max-width: 300px;
+  padding: 20px;
+  margin: 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
